<resources>
    <string name="app_name">Intent</string>
    <string name="moveActivity">Pindah Activity</string>
    <string name="moveWithData">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dialNumber">Dial a Number</string>
    <string name="dataReceived">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="thisIsMoveActivity">Ini MoveActivity</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
</resources>